@@ -88,6 +88,8 @@
 
 #define O_DESTROY(a) { if(a) octstr_destroy(a); a = NULL; }
 
+#define ACCOUNT_MAX_LEN 64
+
 /* Defaults for the HTTP request queueing inside http_queue_thread */
 #define HTTP_MAX_RETRIES    0
 #define HTTP_RETRY_DELAY    10 /* in sec. */
@@ -2140,11 +2142,11 @@ static Octstr *smsbox_req_handle(URLTranslation *t, Octstr *client_ip,
     msg->sms.sms_type = mt_push;
     msg->sms.sender = octstr_duplicate(newfrom);
     if(octstr_len(account)) {
-	if(octstr_len(account) <= 32 && 
+	if(octstr_len(account) <= ACCOUNT_MAX_LEN && 
 	   octstr_search_chars(account, octstr_imm("[]\n\r"), 0) == -1) {
 	    msg->sms.account = account ? octstr_duplicate(account) : NULL;
 	} else {
-	    returnerror = octstr_create("Account field misformed, rejected");
+	    returnerror = octstr_create("Account field misformed or too long, rejected");
 	    goto field_error;
 	}
     }
